# rpi_counter_fastapi

./: .env  .env.example  .gitignore  camera_service.py  camera_service_rpi.py  camera_service_settings.py  camera_service_usb.py  camera_services_config.py  check_db_data.py  create_schema.py  createstructure.py  fix_sequences.py  launch.sh  llmttd.md  main.py  migrate_db.py  pyproject.toml  pytest.ini  readme.md  readme2.md  requirements.txt  safety_instructions.md  start_camera_services.sh  start_main_app.sh  start_services.sh  structurefiles.md  test_camera.h264  test_model.py  yolov8n_full_integer_quant.tflite  yolov8n_integer_quant.tflite
app/auth/: dependencies.py  jwt_handler.py  security.py
app/core/: camera_manager.py  gpio_controller.py  modbus_controller.py  modbus_poller.py  proximity_sensor.py  sensor_events.py  system_orchestrator.py  usr8000_client.py
app/middleware/: metrics_middleware.py
app/models/: __init__.py  configuration.py  database.py  detection.py  detection_event.py  event_log.py  operator.py  product.py  profiles.py  run_log.py  system_status.py
config/: __init__.py  settings.py
scripts/: backup.sh  benchmark.py  create_service.sh  install.sh  install_dependencies.sh  load_test.py  setup_database.sh  setup_pi5.sh  system_test.py
services/: ai_processor.py  camera_raw_publisher.py  camera_service_rpi.py  camera_service_usb.py  camera_services_config.py  hailo_pipeline_service.py  raw_frame_publisher.py  simple_mjpeg_publisher.py  video_streaming.py
tests/: conftest.py  test_api.py  test_models.py  test_services.py
(+98 files in other folders)
