# rpi_counter_fastapi-apintrigation/pyproject.toml

[tool.poetry]
name = "box-counter-system"
version = "1.0.0"
description = "Raspberry Pi 5 box counter system with FastAPI, asyncio, and Uvicorn."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "0.29.0"}
python-multipart = "0.0.9"
sqlalchemy = {extras = ["asyncio"], version = "2.0.30"}
aiosqlite = "0.20.0"
alembic = "1.13.1"
pydantic = "2.7.1"
pydantic-settings = "2.2.1"
python-dotenv = "1.0.1"
aiofiles = "^23.2.1" # <-- ADD THIS LINE

# --- REAL HARDWARE LIBRARIES ---
gpiozero = "2.0"
rpi-lgpio = "*"
rpi-gpio = "*"
picamera2 = "*"
pyserial-asyncio = "0.6"
pymodbus = "3.6.8"

# --- Other Dependencies ---
opencv-python-headless = "4.9.0.80"
numpy = "<2.0"
jinja2 = "3.1.4"
psutil = "5.9.8"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.1"
pytest-asyncio = "0.23.6"
httpx = "0.27.0"
pytest-dotenv = "0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"